--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "babel-loader": "^8.2.5",
+    "@babel/core": "^7.17.10",
+    "babel-plugin-styled-components": "^2.0.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
@@ -28,6 +33,8 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-storybook": "^0.5.11",
     "husky": "^8.0.1",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2"
   }
