--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "nanoid": "^3.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "babel-loader": "^8.2.5",
     "@babel/core": "^7.17.10",
-    "babel-plugin-styled-components": "^2.0.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
