--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.2.0",
     "nanoid": "^3.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
