--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.2.0",
+    "immutability-helper": "^3.1.1",
     "nanoid": "^3.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
     "react-is": "^18.1.0",
