--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.2.0",
+    "immer": "^9.0.14",
     "immutability-helper": "^3.1.1",
     "nanoid": "^3.3.4",
     "next": "12.1.6",
@@ -25,7 +26,8 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
     "react-is": "^18.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "use-immer": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
