--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-hook-form": "^7.31.1",
     "react-is": "^18.1.0",
     "styled-components": "^5.3.5",
-    "use-immer": "^0.7.0"
+    "use-immer": "^0.7.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
